<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoStart="true"
            android:flipInterval="2000"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/dua" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/tiga" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/empat" />

        </ViewFlipper>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:text="@string/judul"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="309dp"
            android:layout_height="40dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/subjudul"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:layout_width="330dp"
            android:layout_height="38dp"
            android:layout_marginBottom="85dp"
            android:text="@string/btn_login" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:layout_width="330dp"
            android:layout_height="38dp"
            android:layout_marginBottom="30dp"
            android:text="@string/btn_register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>