<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:flipInterval="2000"
        android:autoStart="true"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/Dua" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/Tiga"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/Empat"
            />

    </ViewFlipper>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/judul"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="503dp"/>

    <TextView
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/subjudul"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="550dp"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginBottom="85dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>