<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:background="@drawable/universal_topbar_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_black"
                android:text="@string/judul_emergency"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/subjudul_emergency"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="140dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="110dp"
            android:elevation="30dp"
            android:background="@drawable/transparent2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/emergency1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:background="@drawable/transparent"
                android:fontFamily="@font/nunito_black"
                android:text="@string/emergency1"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textSize="27sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="140dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="90dp"
            android:elevation="30dp"
            android:background="@drawable/transparent2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/emergency2"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/transparent"
                android:fontFamily="@font/nunito_black"
                android:text="@string/emergency2"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textSize="27sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>