<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:background="@drawable/universal_topbar_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_black"
                android:text="@string/judul_report"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/subjudul_report"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="375dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_black"
                android:text="@string/problem1"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="105dp"
                android:orientation="vertical"
                android:elevation="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent2"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="350dp"
                        android:layout_height="95dp"
                        android:background="@drawable/transparent"
                        ></com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="375dp"
                android:layout_height="22dp"
                android:fontFamily="@font/nunito_black"
                android:text="@string/problem2"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp"/>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="105dp"
                android:orientation="vertical"
                android:elevation="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent2"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="350dp"
                        android:layout_height="95dp"
                        android:background="@drawable/transparent"
                        ></com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="375dp"
                android:layout_height="22dp"
                android:fontFamily="@font/nunito_black"
                android:text="@string/problem3"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="105dp"
                android:orientation="vertical"
                android:elevation="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/transparent2"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="95dp"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/input"
                        android:layout_width="350dp"
                        android:layout_height="95dp"
                        android:background="@drawable/transparent"
                        ></com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>